0.1.8
 - enh: add and test polaris(z)ation aliases (#64)
 - enh: add latest and all versions for citing in README
 - enh: add PR and issue templates
0.1.7
 - test: added more unit tests and made sure notebooks run via binder
0.1.6
 - ref: place temul polarisation into topotem module (#51)
 - ci: auto git tagging added (#56)
0.1.4
 - ci: add auto pypi push actions
 - ref, doc: fix api doc link references
 - add initial (useable) tests in test directory
 - add CHANGELOG
 - ref: change the directory structure to include topotem (#52)
 - use temul.api as the typical import mechanism (#52)
 - update ci github wf with os and python version matrix